--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
                     <input type="text" class="form-control" placeholder="Name" aria-label="Name">
 
                     <!-- Button Delete contact -->
-                    <button class="btn btn-outline-danger">Elimina</button>
+                    <button id="btnDelete" class="btn btn-outline-danger">Elimina</button>
                 </div>
             </div>
         </div>
