--- a/index.html
+++ b/index.html
@@ -3,65 +3,46 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Bootstrap demo</title>
+    <title>Rubrica con Bootstrap</title>
 
     <!-- CSS Bootstrap -->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-
-    <!-- Google Fonts -->
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Electrolize&family=Open+Sans:ital,wght@0,300..800;1,300..800&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap" rel="stylesheet">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
 
     <!-- Icons Bootstrap -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
-
-    <!-- My css style -->
-    <link rel="stylesheet" href="style.css">
   </head>
   <body>
-    <h1 class="text-center">Rubrica con Bootstrap in Js</h1>
+    <h1 class="text-center my-4">Rubrica con Bootstrap</h1>
 
     <!-- Sezione mostra/nascondi rubrica -->
     <div class="container">
         <div class="row">
             <div class="col-12 d-flex justify-content-center">
-                <button id="btnShow" type="button" class="btn btn-primary">Nascondi <i class="bi bi-eye-slash-fill"></i></button>
+                <button id="btnShow" type="button" class="btn btn-primary">Nascondi<i class="bi bi-eye-slash-fill"></i></button>
             </div>
         </div>
     </div>
 
-    <!-- Sezione dei input e pulsanti -->
+    <!-- Sezione input e pulsanti -->
     <div class="container my-5">
         <div class="row">
             <div class="col-12">
-                <!-- sezione aggiungi contatto -->
                 <div class="input-group mb-3">
-                    <span class="input-group-text" id="basic-addon1"><i class="bi bi-person"></i></span>
-                    <!-- Name contact -->
-                    <input id="inputName" type="text" class="form-control" placeholder="Name" aria-label="Name">
-
-                    <!-- Number contact -->
-                    <input id="inputNumber" type="text" class="form-control" placeholder="Number" aria-label="Number">
-
-                    <!-- Button Add contact -->
-                     <button id="btnAdd" class="btn btn-outline-primary">Aggiungi</button>
+                    <span class="input-group-text"><i class="bi bi-person"></i></span>
+                    <input id="inputName" type="text" class="form-control" placeholder="Name">
+                    <input id="inputNumber" type="text" class="form-control" placeholder="Number">
+                    <button id="btnAdd" class="btn btn-outline-primary">Aggiungi</button>
                 </div>
-
-                <!-- sezione elimina contatto -->
                 <div class="input-group mb-3">
-                    <span class="input-group-text" id="basic-addon1"><i class="bi bi-person"></i></span>
-                    <!-- Name contact -->
-                    <input type="text" class="form-control" placeholder="Name" aria-label="Name">
-
-                    <!-- Button Delete contact -->
+                    <span class="input-group-text"><i class="bi bi-person"></i></span>
+                    <input id="inputDelete" type="text" class="form-control" placeholder="Name">
                     <button id="btnDelete" class="btn btn-outline-danger">Elimina</button>
                 </div>
             </div>
         </div>
     </div>
 
-    <!-- Sezione tabella contatti -->
+    <!-- Sezione tabella -->
     <div class="container">
         <div class="row">
             <div class="col-12">
@@ -70,15 +51,14 @@
                         <tr>
                             <th scope="col">Nome</th>
                             <th scope="col">Numero</th>
+                            <th scope="col">Azioni</th>
                         </tr>
                     </thead>
-                    <tbody>
-                        
-                    </tbody>
+                    <tbody></tbody>
                     <tfoot>
                         <tr>
                             <th>Totale</th>
-                            <td id="tot">100</td>
+                            <td colspan="2" id="tot">0</td>
                         </tr>
                     </tfoot>
                 </table>
@@ -86,11 +66,37 @@
         </div>
     </div>
 
+    <!-- Modal -->
+    <div class="modal fade" id="modalEdit" tabindex="-1" aria-hidden="true">
+        <div class="modal-dialog">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h5 class="modal-title">Modifica Contatto</h5>
+                    <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                </div>
+                <div class="modal-body">
+                    <form id="formEdit">
+                        <div class="mb-3">
+                            <label for="editName" class="form-label">Nome</label>
+                            <input id="editName" type="text" class="form-control" required>
+                        </div>
+                        <div class="mb-3">
+                            <label for="editNumber" class="form-label">Numero</label>
+                            <input id="editNumber" type="text" class="form-control" required>
+                        </div>
+                        <button type="submit" class="btn btn-warning">Salva Modifiche</button>
+                    </form>
+                </div>
+            </div>
+        </div>
+    </div>
 
-    <!-- Js Bootstrap -->
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
+    <!-- Toast di conferma -->
+    <div id="toastContainer" class="position-fixed bottom-0 end-0 p-3" style="z-index: 11;"></div>
 
-    <!-- My Js -->
-    <script src="./script.js"></script>
+    <!-- JS Bootstrap -->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
+    <!-- Script -->
+    <script src="script.js"></script>
   </body>
 </html>
